--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Imovel Guide</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/index.css">
+  <link rel="stylesheet" href="./styles/header.style.css">
+  <link rel="stylesheet" href="./styles/main.style.css">
+  <script type="module" src="./script.js"></script>
 </head>
 <body>
   <header>
@@ -27,22 +30,36 @@
     </nav>
   </header>
   <main>
-    <section id="agents-box">
+    <section id="agents-section">
       <h2>1</h2>
-      <div id="agent-1">
-        <img src="" alt="agent's picture">
-        <h1 id="name-agent-1">Corretor 1</h1>
-        <p id="points">3.000 pontos</p>
-        <p id="phone">ver telefone</p>
-      </div>
-      <div id="agent-2">
-        <img src="" alt="agent's picture">
-        <h1 id="name-agent-2">Corretor 2</h1>
-        <p id="points">1.260 pontos</p>
-        <p id="phone">ver telefone</p>
+      <div id="content-agents">
+        <div class="agent">
+          <div class="content-img">
+            <img src="./img/agent-1.png" alt="agent's picture" class="img-blur">
+            <img src="./img/agent-1.png" alt="agent's picture">
+          </div>
+          <div class="content-info">
+            <h1 class="name-agent">Corretor 1</h1>
+            <p class="points">3.000 pontos</p>
+            <p class="phone-toggle">ver telefone</p>
+            <p class="phone" style="display: none;">(99) 99999-9999</p>
+          </div>
+        </div>
+        <div class="agent">
+          <div class="content-img">
+            <img src="./img/agent-2.png" alt="agent's picture" class="img-blur">
+            <img src="./img/agent-2.png" alt="agent's picture">
+          </div>
+          <div class="content-info">
+            <h1 class="name-agent">Corretor 2</h1>
+            <p class="points">1.260 pontos</p>
+            <p class="phone-toggle">ver telefone</p>
+            <p class="phone" style="display: none;">(99) 99999-9999</p>
+          </div>
+        </div>
       </div>
     </section>
-    <section id="message-box">
+    <section id="message-section">
       <h2>2</h2>
       <div id="informations">
         <h2>Mande uma Mensagem:</h2>
@@ -58,7 +75,7 @@
         <button id="btn-message">Enviar Mensagem</button>
       </div>
     </section>
-    <section id="rule-three-box">
+    <section id="rule-three-section">
       <h2>3</h2>
       <div id="rule-three">
         <h2>Regra de 3:</h2>
