--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <title>Imovel Guide</title>
   <link rel="stylesheet" href="./styles/index.css">
   <link rel="stylesheet" href="./styles/header.style.css">
-  <link rel="stylesheet" href="./styles/main.style.css">
+  <link rel="stylesheet" href="./styles/main.agents.style.css">
+  <link rel="stylesheet" href="./styles/main.form.style.css">
   <script type="module" src="./script.js"></script>
 </head>
 <body>
@@ -30,9 +31,9 @@
     </nav>
   </header>
   <main>
-    <section id="agents-section">
+    <section class="agents-section">
       <h2>1</h2>
-      <div id="content-agents">
+      <div class="content-agents">
         <div class="agent">
           <div class="content-img">
             <img src="./img/agent-1.png" alt="agent's picture" class="img-blur">
@@ -59,20 +60,23 @@
         </div>
       </div>
     </section>
-    <section id="message-section">
+    <section class="message-section">
       <h2>2</h2>
-      <div id="informations">
+      <div class="form">
         <h2>Mande uma Mensagem:</h2>
-        <label for="cpf">
-          <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF">
+        <label for="cpf" class="label-cpf">
+          <input type="text" id="cpf" name="cpf" class="cpf-input" placeholder="Digite seu CPF">
+          <span class="span-input-cpf">Apenas os números</span>
         </label>
-        <label for="phone">
-          <input type="number" id="phone" name="phone" placeholder="Digite seu telefone">
+        <label for="phone" class="label-phone">
+          <input type="text" id="phone" name="phone" class="telefone-input" placeholder="Digite seu telefone">
+          <span class="span-input-phone">Apenas os números</span>
         </label>
+        
         <label for="subject">
           <input type="text" id="subject" name="subject" placeholder="Digite o assunto">
         </label>
-        <button id="btn-message">Enviar Mensagem</button>
+        <button class="btn-message">Enviar Mensagem</button>
       </div>
     </section>
     <section id="rule-three-section">
