--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,12 @@
   <link rel="stylesheet" href="./styles/main.form.style.css">
   <link rel="stylesheet" href="./styles/main.rule-three.style.css">
   <link rel="stylesheet" href="./styles/main.modal.style.css">
+  <link rel="stylesheet" href="./styles/main.canvas.style.css">
   <script type="module" src="./scripts/validForm.js"></script>
   <script type="module" src="./scripts/functionRuleThree.js"></script>
   <script type="module" src="./scripts/functionModal.js"></script>
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+  <script type="module" src="./scripts/functionCaptureCanva.js"></script>
 </head>
 <body>
   <header>
@@ -107,11 +110,13 @@
         <button id="btn-modal">ABRIR IMAGEM NO MODAL</button>
       </div>
     </section>
-    <section id="img-2-box">
+    <section class="img-2-section">
       <h2>5</h2>
-      <div id="img-2">
-        <img src="" alt="picture">
-        <div id="rectangle">Imovel Guide</div>
+      <div class="contains-img-2">
+        <div id="capture">
+          <img src="./img/img-2.png" alt="picture">
+          <div id="rectangle"><span>Imovel Guide</span></div>
+        </div>
         <button id="btn-download">Download</button>
       </div>
     </section>
