--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./styles/main.modal.style.css">
   <link rel="stylesheet" href="./styles/main.canvas.style.css">
   <link rel="stylesheet" href="./styles/main.zoom.style.css">
+  <link rel="stylesheet" href="./styles/footer.style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="module" src="./scripts/validForm.js"></script>
   <script type="module" src="./scripts/functionRuleThree.js"></script>
@@ -41,26 +42,6 @@
       </div>
     </div>
   </header>
-  
-  <!-- ><header>
-    <nav id="nav-pages">
-      <img src="" alt="logo">
-      <ul id="menu">
-        <li><a href="/condos">Condomínios</a></li>
-        <li><a href="/forum">Fórum</a></li>
-        <li><a href="/guide">Guia</a></li>
-        <li><a href="/articles">Artigos</a></li>
-        <li><a href="/tools">Ferramentas</a></li>
-      </ul>
-
-      <ul id="menu-user">
-        <li><a href="/quote_property">Cotar Imóvel</a></li>
-        <li><a href="/plans">Planos</a></li>
-        <li><a href="/login">Entrar</a></li>
-        <li><a href="/register"  id="a-register">CADASTRE-SE</a></li>
-      </ul>
-    </nav>
-  </header> -->
   <main>
     <section class="agents-section">
       <h2>1</h2>
