--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 <body>
   <header>
     <div class="top-nav">
-      <a href="#home" class="active">Logo</a>
+      <a href="#home" class="active"><img src="./img/icone-3-attr (2).png" alt="logo" id="logo"></a>
       <div id="menu" class="menu-desktop">
         <a href="#quote_property">Cotar Imóvel</a>
         <a href="#plans">Planos</a>
@@ -32,7 +32,7 @@
         <a href="#register"  id="a-register">CADASTRE-SE</a>
       </div>
       <div class="menu-icon" id="menu-toggle">
-        <img src="./img/icone-3-attr (2).png" alt="">
+        <img src="./img/icone-4-attr (2).png" alt="">
       </div>
       <div id="menu-mobile" class="hidden">
         <a href="#quote_property">Cotar Imóvel</a>
